--- a/public/index.html
+++ b/public/index.html
@@ -24,20 +24,10 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-165291704-2"
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
         ></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'UA-165291704-2');
-        </script>
 
         <!--
       This HTML file is a template.
