--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,17 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="/__/firebase/7.16.1/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="/__/firebase/7.16.1/firebase-analytics.js"></script>
+
+        <!-- Initialize Firebase -->
+        <script src="/__/firebase/init.js"></script>
+
         <div id="root"></div>
 
         <script
